--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,7 +1,96 @@
 .proyects{
     background-color: var(--DarckBlue);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.proyectsContainer{
+    /* background-color: lightcoral; */
+    max-width: 70rem;
+    padding: 10px;
 }
 .projectsH2{
     color: white;
     text-decoration: underline;
+    width: 100%;
+    font-size: 30px;
+    margin: 10px 0;
 }
+.proyectsContainerCard{
+    margin-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.876);
+}
+.proyectsImgContainer{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    border-radius: 10px 10px 0 0;
+}
+.proyectsImg{
+    width: 100%;
+    border-radius: 10px 10px 0 0;
+}
+.proyectsButtons{
+    background-color: rgba(255, 255, 255, 0.934);
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    border-radius: 0 0 10px 10px;
+}
+.proyectsBtn {
+    color: white;
+    background-color: #000000;
+    padding: 10px 18px;
+    border: 0px;
+    font-size: 17px;
+    transition: 0.3s;
+    border-radius: 10px;
+    font-family: Arial;
+    font-weight: 600;
+    margin: 10px;
+    cursor: pointer;
+    box-shadow: 0 3px #d8115afe;;
+}
+   
+.proyectsBtn:hover {
+    transition: 0.2s;
+    /* background-color: white;
+    color: #000000; */
+}
+   
+.proyectsBtn:active {
+    box-shadow: 0 0px #D81159;
+    transform: translateY(3px);
+}  
+
+@media (min-width: 768px) {
+    .proyects{
+        flex-direction: row;
+        justify-content: center;
+    }
+    .proyectsContainer{
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        flex-wrap: wrap;
+        gap: 30px;
+    }
+    .proyectsContainerCard{
+        margin-bottom: 0;
+        width: 47%;
+    }
+    .proyectsButtons{
+        padding: 5px;
+    }
+    /* .proyectsImgContainer{
+        width: 100%;
+    }
+    .proyectsImg{
+        width: 100%;
+    } */
+}
+
