se cambia los colores

--- a/src/index.css
+++ b/src/index.css
@@ -13,8 +13,8 @@ code {
 }
 
 :root{
-  --DarckBlue: #3A4555;
+  --DarckBlue: #0f172a;
   --whiteMore: #D4D4D4;
   --white:  #EDECEC;
-  --lightbluee: #29C1E1;
+  --lightblue: #1c2638;
 }
