--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,7 +7,9 @@
     justify-content: space-around;
     align-items: center;
     color:white;
-    height: 10vh;
+    min-height: 8vh;
+    position: sticky;
+    top: 0;
 }
 /* .Header-h1{}
 .Header-a{} */
@@ -33,6 +35,7 @@
 }
 .Header-li{
     margin: 0 .8rem;
+    cursor: pointer;
 }
 
 @media (max-width: 480px ) {
