--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -13,7 +13,6 @@
     color: white;
     text-decoration: underline;
     width: 100%;
-    font-size: 30px;
     margin: 10px 0;
 }
 .proyectsContainerCard{
@@ -22,7 +21,8 @@
     flex-direction: column;
     align-items: center;
     border-radius: 10px;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.876);
+    box-shadow: 0px 5px 10px 5px #1b2f61;
+    border: 1px solid #44475a;
 }
 .proyectsImgContainer{
     width: 100%;
@@ -35,17 +35,17 @@
     border-radius: 10px 10px 0 0;
 }
 .proyectsButtons{
-    background-color: rgba(255, 255, 255, 0.934);
+    background-color: #1c2638;
     width: 100%;
     display: flex;
     justify-content: space-evenly;
     border-radius: 0 0 10px 10px;
 }
 .proyectsBtn {
-    color: white;
+    color: rgb(255, 255, 255);
     background-color: #000000;
     padding: 10px 18px;
-    border: 0px;
+    border: 0;
     font-size: 17px;
     transition: 0.3s;
     border-radius: 10px;
@@ -53,11 +53,12 @@
     font-weight: 600;
     margin: 10px;
     cursor: pointer;
-    box-shadow: 0 3px #d8115afe;;
+    /* box-shadow: 0 3px #d8115afe;; */
+    transition: 0.3s all;
 }
    
 .proyectsBtn:hover {
-    transition: 0.2s;
+    transform: scale(1.1);
     /* background-color: white;
     color: #000000; */
 }
@@ -75,7 +76,7 @@
     .proyectsContainer{
         display: flex;
         flex-direction: row;
-        justify-content: flex-start;
+        justify-content: space-around;
         flex-wrap: wrap;
         gap: 30px;
     }
