--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -5,23 +5,35 @@
     flex-direction: column-reverse;
     justify-content: center;
     align-items: center;
-    /* background-image: url(../../Assets/Img/bgremove.png); */
-    background-repeat: no-repeat;
-    background-position: bottom;
-    background-size: 150% 20%;
     padding: 10px;
 }
 .homeInfo{
     color: white;
     display: flex;
     flex-direction: column;
+    align-items: center;
     text-align: center;
     margin-bottom: 100px;
 }
 .homeImgJoaquin{
-    width: 300px;
+    width: 240px;
+    margin: 20px;
 }
-
+.homeIconContainer{
+    margin-top: 15px;
+}
+.homeImgIcon{
+    width: 45px;
+    margin: 15px;
+    color: white;
+    transition: all 0.5s;
+    cursor: pointer;
+    box-shadow: 0px 2px 5px 10px rgba(0, 0, 0, 0.147);
+    border-radius: 100%;
+}
+.homeImgIcon:hover{
+    transform: scale(1.2);
+}
 @media (min-width:1024px) {
     .homeContainer{
         flex-direction: row;
@@ -30,7 +42,15 @@
         margin-bottom: 0px;
     }
     .homeP{
-        font-size: 19px;
+        font-size: 18px;
+    }
+    .homeImgJoaquin{
+        width: 300px;
+        padding: 15px
+    }
+    .homeIconContainer{
+        box-shadow: none;
+        border-radius: 0;
     }
 }
 
