--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,8 +8,7 @@
     align-items: center;
     color:white;
     min-height: 8vh;
-    position: sticky;
-    top: 0;
+    position: fixed;
     z-index: 1;
 }
 /* .Header-h1{}
