se cambia el tamaño de la card

--- a/src/components/technologies/technologies.css
+++ b/src/components/technologies/technologies.css
@@ -95,4 +95,8 @@
         width: 30%;
         padding: 10px 0;
     }
+    .technologiesLearning{
+        width: 30%;
+        padding: 10px 0;
+    }
 }
