--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -8,7 +8,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 90vh;
+    height: 86vh;
 }
 .contactH2{
     color: white;
@@ -91,7 +91,8 @@
     padding: 7px;
     border: 0;
     border-radius: 10px;
-} 
+    cursor: pointer;
+}
 .a{
     color: white;
 }
