--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -34,6 +34,31 @@
 .homeImgIcon:hover{
     transform: scale(1.2);
 }
+.homeSpan{
+    font-size: 17px;
+    display: block;
+    font-family: monospace;
+    white-space: nowrap;
+    border-right: 3px solid;
+    width: 33ch;
+    animation: typing 2.5s steps(33), 
+    blink .5s infinite step-end alternate;
+    overflow:hidden;
+    margin-bottom: 8px;
+}
+@keyframes typing {
+    from { width: 0}
+}
+@keyframes blink {
+    50% { border-color: transparent}
+}
+
+@media (min-width:768px) {
+    .homeSpan{
+        font-size: 33px;
+        margin-bottom: 0;
+    }
+}
 @media (min-width:1024px) {
     .homeContainer{
         flex-direction: row;
