--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -48,6 +48,8 @@
 @media (max-width: 480px ) {
     .Header{
         justify-content: space-between;
+        background-color: #0f172ad8;
+        backdrop-filter: blur(30px);
     }
     .Header-button{
         display: block;
@@ -64,9 +66,9 @@
         transition: all .5s ease;
     }
     .Header-nav.active{
-        height: 25vh;
+        height: 26vh;
         opacity: 1;
-        margin: 1rem;
+        margin: .9rem;
         z-index: 1;
     }
     .Header-ul{
