--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -13,7 +13,7 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    margin-bottom: 100px;
+    /* margin-bottom: 100px; */
 }
 .homeImgJoaquin{
     width: 240px;
@@ -35,7 +35,7 @@
     transform: scale(1.2);
 }
 .homeSpan{
-    font-size: 17px;
+    font-size: 16px;
     display: block;
     font-family: monospace;
     white-space: nowrap;
