--- a/src/components/Projects/Proyects.css
+++ b/src/components/Projects/Proyects.css
@@ -83,6 +83,7 @@
         flex-direction: row;
         justify-content: center;
         min-height: 94vh;
+        padding-bottom: 20px;
     }
     .proyectsContainer{
         display: flex;
