--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -35,10 +35,10 @@
 .homeSpan{
     font-size: 16px;
     display: block;
-    font-family: monospace;
+    /* font-family: monospace; */
     white-space: nowrap;
     border-right: 3px solid;
-    width: 33ch;
+    width: 27ch;
     animation: typing 2.5s steps(33), 
     blink .5s infinite step-end alternate;
     overflow:hidden;
