--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -13,7 +13,6 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    /* margin-bottom: 100px; */
 }
 .homeImgJoaquin{
     margin: 20px;
@@ -60,6 +59,10 @@
 @media (min-width:1024px) {
     .homeContainer{
         flex-direction: row;
+    }
+    .homeImgJoaquin{
+        width: 360px;
+        height: 360px;
     }
     .homeInfo{
         margin-bottom: 0px;
