--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -42,13 +42,9 @@
     background-color: transparent;
     color: white;
     transition: .3s cubic-bezier(0.645, 0.045, 0.355, 1);
+    max-width: 100%;
+    max-height: 300px;
 }
-/* .contactTextarea:focus, input:hover {
-    outline: none;
-    padding: .2rem 1rem;
-    border-radius: 10px;
-    border-color: rgba(255, 255, 255, 0.909);
-} */
 
 .contactTextarea::placeholder {
     color: rgba(255, 255, 255, 0.542);
@@ -71,13 +67,6 @@
     transition: .3s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
    
-/* .contactinput:focus, input:hover {
-    outline: none;
-    padding: .2rem 1rem;
-    border-radius: 10px;
-    border-color: rgba(255, 255, 255, 0.909);
-} */
-
 .contactinput::placeholder {
     color: rgba(255, 255, 255, 0.542);
 }
