fix: variable de color

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,6 +1,6 @@
 .header{
     width: 100%;
-    background-color: var(--DarckBlue);
+    background-color: var(--darkBlue);
     padding: 1rem;
     display: flex;
     flex-flow: row wrap;
