--- a/src/components/technologies/technologies.module.css
+++ b/src/components/technologies/technologies.module.css
@@ -64,7 +64,9 @@
     padding: 7px;
     border: 2px solid #44475a95;
     width: 35%;
-    box-shadow: 0px 5px 10px 3px #1b2f61;
+    filter: drop-shadow(
+        0 0 10px rgba(0,0,0,0.2)
+    );
     transition: all 0.5s;
 }
 
