--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -1,33 +1,37 @@
-.projects{
+.projects {
     background-color: var(--darkBlue);
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.projectsContainer{
+
+.projectsContainer {
     max-width: 70rem;
     padding: 10px;
 }
-.projectsH2{
+
+.projectsH2 {
     color: white;
     text-decoration: underline;
     width: 100%;
     margin: 15px 0;
     text-align: center;
 }
-.projectsP{
+
+.projectsP {
     width: 100%;
     color: white;
-    margin: 2rem 0;
+    margin: 2.5rem 0;
     text-align: center;
 }
-.projectsName{
+
+.projectsName {
     color: white;
     font-size: 18px;
     margin-left: 10px;
 }
 
-.projectsContainerCard{
+.projectsContainerCard {
     margin-bottom: 1.9rem;
     margin-right: .3rem;
     margin-left: .3rem;
@@ -38,21 +42,25 @@
     box-shadow: 0px 5px 10px 3px #1b2f61;
     border: 2px solid #44475a95;
 }
-.projectsImgContainer{
+
+.projectsImgContainer {
     width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     border-radius: 10px 10px 0 0;
     position: relative;
     overflow: hidden;
 }
-.projectsImg{
+
+.projectsImg {
     width: 100%;
     height: 100%;
     border-radius: 10px 10px 0 0;
     transition: all .4s ease-in;
 }
-.projectDescription{
+
+.projectDescription {
     position: absolute;
     bottom: -102%;
     width: 100%;
@@ -68,27 +76,31 @@
     padding: .8rem;
     overflow-y: auto;
 }
-.projectDescription::-webkit-scrollbar{
+
+.projectDescription::-webkit-scrollbar {
     width: .4rem;
     background-color: white;
 }
 
-.projectDescription::-webkit-scrollbar-thumb{
+.projectDescription::-webkit-scrollbar-thumb {
     background: rgba(40, 41, 43, 0.757);
 }
 
-.projectsImgContainer:hover .projectDescription{
+.projectsImgContainer:hover .projectDescription {
     bottom: 0;
     transition-delay: .1s;
 }
-.projectDescription > p {
+
+.projectDescription>p {
     line-height: 1.5;
     text-align: start;
 }
-.span{
+
+.span {
     font-weight: 600;
 }
-.projectsButtons{
+
+.projectsButtons {
     background-color: #1c2638;
     width: 100%;
     display: flex;
@@ -96,6 +108,7 @@
     align-items: center;
     border-radius: 0 0 10px 10px;
 }
+
 .projectsBtn {
     color: rgb(255, 255, 255);
     background-color: #111111;
@@ -109,27 +122,29 @@
     cursor: pointer;
     transition: 0.3s all;
 }
-.link{
+
+.link {
     text-decoration: none;
     color: white;
 }
-   
+
 .projectsBtn:hover {
     transform: scale(1.1);
 }
-   
+
 .projectsBtn:active {
     transform: translateY(3px);
-}  
+}
 
 @media (min-width: 768px) {
-    .projects{
+    .projects {
         flex-direction: row;
         justify-content: center;
         min-height: 94vh;
         padding-bottom: 20px;
     }
-    .projectsContainer{
+
+    .projectsContainer {
         display: flex;
         flex-direction: row;
         justify-content: space-around;
@@ -137,23 +152,29 @@
         gap: 30px;
         padding-bottom: 1.5rem;
     }
-    .projectsContainerCard{
+
+    .projectsContainerCard {
         margin: 0;
         width: 47%;
     }
-    .projectsButtons{
-        padding: 5px;
+
+    .projectsButtons {
+        padding: .3rem;
     }
-    .projectsH2{
+
+    .projectsH2 {
         margin: 0;
     }
-    .projectsName{
+
+    .projectsName {
         margin-left: 0;
     }
-    .proyectDescription{
+
+    .proyectDescription {
         padding: 1rem;
     }
-    .projectDescription > p {
+
+    .projectDescription>p {
         font-size: 1.1rem;
         line-height: 1.7;
     }
